@@ -9,8 +9,7 @@
 <body>
 
 <div metal:fill-slot="prefs_configlet_content"
-    tal:define="pfgTool python: modules['Products.CMFCore.utils'].getToolByName(here, 'formgen_tool');
-                allPermits pfgTool/getPfgPermissions">
+    tal:define="pfgTool python: modules['Products.CMFCore.utils'].getToolByName(here, 'formgen_tool');">
 
     <div id="content" class="documentEditable" i18n:domain="ploneformgen"
          tal:condition="python:checkPermission('Manage portal', here)">
@@ -18,7 +17,7 @@
         <h5 class="hiddenStructure">Views</h5>
 
         <ul class="contentViews">
-            <li class="selected">
+            <li>
             <a href="prefs_pfg_permits"
                 i18n:translate="label_ploneformgen_permissions">Permissions</a>
             </li>
@@ -30,10 +29,10 @@
             <a href="prefs_pfg_mtemplate"
                 i18n:translate="label_ploneformgen_mtemplate">Mail Template</a>
             </li>
-            <li>
+            <li class="selected">
             <a href="prefs_pfg_savedata"
                 i18n:translate="label_ploneformgen_savedata">Saved Data</a>
-            </li>            
+            </li>                   
         </ul>
 
         <div class="contentActions">
@@ -48,56 +47,38 @@
         </div>
 
         <div class="configlet">
-            <h1 i18n:translate="heading_ploneformgen_permissions">PloneFormGen Permissions</h1>
+            <h1 i18n:translate="heading_ploneformgen_savedata">PloneFormGen Saved Data Adapter Defaults</h1>
 
             <a href=""
               class="link-parent"
               tal:attributes="href string: $portal_url/plone_control_panel"
-              i18n:domain="plone"
-              i18n:translate="label_up_to_plone_setup">
+              i18n:translate="label_up_to_plone_setup"
+              i18n:domain="plone">
               Up to Site Setup
             </a>
 
-            <p class="documentDescription" i18n:translate="description_ploneformgen_permissions">
-                You may hide or expose PloneFormGen functionality from classes of users by adjusting the permissions
-                allowed to particular portal security roles. The form below adjusts role/permission settings at the
-                site level. You may fine tune permissions on a folder-by-folder basis via the security tab in the ZMI.
+            <p class="documentDescription" i18n:translate="description_ploneformgen_savedata">
+                Set defaults for data adapters. 
             </p>
     
             <form action="" method="post" tal:attributes="action template_id">
 
                 <input type="hidden" name="form.submitted" value="1" />
+                
+                <div class="field">
+	                <label for="csv_delimiter" i18n:translate="label_ploneformgen_csv_delimiter">CSV Delimiter</label>
+	                <div class="formHelp" i18n:translate="help_csv_delimiter">
+                    Choose a default delimiter to be used when downloading content from
+                    a save-data adapter.
+                </div>
+                <input type="text" name="csv_delimiter" id="csv_delimiter" size='1' value="delimiter"
+                tal:attributes="value pfgTool/getCSVDelimiter;
+                                tabindex tabindex/next;"
+                />
 
-                <tal:block tal:repeat="pname allPermits">
-                <fieldset>
-                  <legend
-                     tal:content="python:pname.replace('PloneFormGen: ','').replace('Add Content','Add Form Folders/Fields')" 
-                     i18n:domain="ploneformgen"
-                     i18n:translate=""
-                     style="font-weight:bold" />
+                </div>
 
-                  <input type="hidden" value="1" tal:attributes="name pname" />
-                  
-                  <table><tr>
-                    <th tal:repeat="permit python: pfgTool.rolesForPermission(pname)">
-                        <label
-                            tal:content="permit/label" 
-                            tal:attributes="for permit/id"
-                            i18n:domain="zope"
-                            i18n:translate=""
-                          >role</label><br />
-                        <input type="checkbox" value="1"
-                          tal:attributes="name permit/id;
-        									id permit/id;
-                          checked permit/checked;
-                          tabindex tabindex/next;"
-                        />
-                    </th>
-                  </tr></table>
-
-                </fieldset>
-                </tal:block>
-
+                <div class="formControls">
                 <input class="context"
                     tabindex=""
                     type="submit"
@@ -106,6 +87,7 @@
                     i18n:attributes="value label_apply_changes;"
                     tal:attributes="tabindex tabindex/next;"
                     />
+                </div>
             </form>
 
         </div>
