@@ -1,0 +1,5 @@
+[default]
+title=Set PloneFormGen Save Data Template
+
+[actions]
+action.success = traverse_to:string:prefs_pfg_savedata
